Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4272

HostDB not clearing HostDBInfos for hosts file entries

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.1.2, 6.2.0
    • None
    • None

    Description

      std::map is creating an entry, and we are setting a subset of values. Since we were not clearing the memory that we got, we end up with some non-initialized structure fields-- meaning the HostDBInfo object we return is corrupt.

      Found during investigation of TS-4207

      Attachments

        Activity

          People

            jacksontj Thomas Jackson
            jacksontj Thomas Jackson
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: